--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="img/2412886.png" />
+  <link rel="icon" href="./2412886.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="This site is created as a part of my course" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
